# falcon-lib

./: .dockerignore  .gitattributes  .gitignore  404.html  LICENSE  Makefile  README.md  dune-project  falcon.opam  falcon_core-config-version.cmake  falcon_core-config.cmake  index.html  main.py  mkdocs.yml  pyproject.toml  sitemap.xml  vcpkg.json
autotuner/: .clangd  .gitignore  CMakeLists.txt  Makefile  parser.tab.cc
autotuner/cmake/: falcon-autotuner-config.cmake.in
autotuner/compiler/: CMakeLists.txt  v2_test.fal
autotuner/compiler/src/: ASTHelpers.cpp  BuiltinRegistry.cpp  Compiler.cpp  CompilerLib.cpp  ParseError.cpp  compiler.cpp  lexer.l  parser.y
autotuner/docs/: LANGUAGE_REFERENCE.md  TUTORIAL.md
autotuner/example/voltage_sweep/: CMakeLists.txt  voltage_sweep.fal  voltage_sweep_impl.cpp
autotuner/include/falcon-autotuner/: Autotuner.hpp  AutotunerEngine.hpp  DeviceCharacteristic.hpp  ExprEvaluator.hpp  FalconParser.hpp  FfiHelpers.hpp  FunctionRegistry.hpp  GraphAnalyzer.hpp  Interpreter.hpp  MeasurementRoutine.hpp  ParameterMap.hpp  PluginLoader.hpp  Runtime.hpp  RuntimeValue.hpp  SourceContext.hpp  State.hpp  StateIterators.hpp  StateNode.hpp  StmtExecutor.hpp  TypeRegistry.hpp  log.hpp
autotuner/lsp/: .clangd  CMakeLists.txt  Makefile  README.md
autotuner/lsp/neovim/: falcon_lsp.lua
autotuner/lsp/src/: CompletionProvider.cpp  DefinitionProvider.cpp  FalconDocument.cpp  FalconServer.cpp  ImportResolver.cpp  TypeChecker.cpp
autotuner/lsp/tests/: CMakeLists.txt
autotuner/package-manager/src/: PackageCache.cpp  PackageManager.cpp  PackageResolver.cpp  main_cli.cpp
autotuner/plugins/: CMakeLists.txt  example_plugin.cpp
autotuner/src/: Autotuner.cpp  AutotunerEngine.cpp  ExprEvaluator.cpp  FalconCodeGenerator.cpp  FalconCompiler.cpp  FalconLexer.cpp  FalconParser.cpp  FunctionRegistry.cpp  GraphAnalyzer.cpp  Interpreter.cpp  ParameterMap.cpp  RuntimeValue.cpp  SourceContext.cpp  StmtExecutor.cpp  TypeRegistry.cpp  log.cpp  main.cpp
autotuner/src/dsl/: FalconCodeGenerator.cpp  FalconCompiler.cpp  FalconLexer.cpp  FalconParser.cpp
autotuner/tests/: CMakeLists.txt  test_runner.cpp  test_utils.hpp
autotuner/tests/integration/: dsl_test_base.hpp  test_autotuner_execution.cpp  test_basic_features.cpp  test_config.cpp  test_control_errors_expressions.cpp  test_control_flow.cpp  test_database_access.cpp  test_error_handling.cpp  test_expressions.cpp  test_foreign_function.cpp  test_full_compilation.cpp  test_graph_analyzer.cpp  test_interpreter.cpp  test_local_import.cpp  test_log.cpp  test_namespacing.cpp  test_nest.cpp  test_nested_autotuners.cpp  test_plugin_loader.cpp  test_routines.cpp  test_structs.cpp
autotuner/tests/test-autotuners/: arithmetic-test.fal  conditional-chain.fal  conditional-nest.fal  fatal-simple-error.fal  generic-iteration-test.fal  generic-processor.fal  logical-test.fal  multi-stage-workflow.fal  no-transition.fal  routine-nest.fal  (+8 more)
autotuner/tools/: falcon-runtime.cpp
autotuner/treesitter/: Makefile  README.md  grammar.js
comms/: CMakeLists.txt  Makefile  docker-compose.test.yml
comms/cmake/: falcon-comms-config.cmake.in
comms/src/: autotuner_comms.cpp  natsManager.cpp  routine_comms.cpp  runtime_comms.cpp
comms/tests/: CMakeLists.txt
database/: CMakeLists.txt  Makefile  README.md  docker-compose.test.yml  index.html
database/cmake/: falcon-databaseConfig.cmake.in
database/docs/: CLI.md
database/schema/: snapshot.schema.json
database/src/: DatabaseConnection.cpp  DeviceCharacteristic.cpp  SnapshotManager.cpp  SnapshotSchemaData.hpp.in  cli.cpp
database/tests/: CMakeLists.txt
dsl/: .gitignore  CMakeLists.txt  Makefile  README.md  grammar.js  index.html  parser.tab.cc  test-overload.fal  tree-sitter.json  vcpkg.json
dsl/cmake/: falcon-dsl-config.cmake.in
dsl/compiler/: CMakeLists.txt
dsl/docs/: LANGUAGE_REFERENCE.md  OVERVIEW.md  PACKAGE_MANAGER.md  TUTORIAL.md
dsl/example/: CMakeLists.txt  all-in-one.fal  charge-configuration-tuner.fal
dsl/lsp/: CMakeLists.txt  Makefile  README.md  index.html
dsl/package-manager/: .clangd  CMakeLists.txt
dsl/src/: AutotunerEngine.cpp  ExprEvaluator.cpp  FunctionRegistry.cpp  Interpreter.cpp  SourceContext.cpp  StmtExecutor.cpp  TypeRegistry.cpp  log.cpp  parser.c
dsl/tests/: CMakeLists.txt  test_cast_syntax.fal
dsl/treesitter/: Makefile  README.md  grammar.js  index.html  package-lock.json  package.json
falcon-lsp/: Makefile  README.md  pyproject.toml
falcon-lsp/falcon_lsp/: __init__.py  ast_nodes.py  builtins.py  lexer.py  parser.py  server.py  type_checker.py
falcon-lsp/neovim/: falcon_lsp.lua  init.lua
falcon-lsp/src/: DefinitionProvider.cpp  DiagnosticsProvider.cpp  FalconDocument.cpp  FalconDocument.hpp  TypeChecker.hpp  main.cpp
falcon-lsp/tests/: CMakeLists.txt  test_lexer.py  test_parser.py  test_server.py  test_type_checker.py
falcon-lsp/treesitter/: README.md  grammar.js
lib/: acu_api.ml  dune  ui_api.ml
lib/acu/: acu_registry.ml  acu_templates.ml  acu_types.ml  autotuner_base.ml  base_acu.ml  feature_optimizer_base.ml  optimizer_jobs.ml  signal_analyzer_base.ml  signal_collector_base.ml
lib/analysis/: owl_helpers.ml
lib/python/: signal_mapper.py
lib/types/: specifications.ml
lib/utils/: config_factory.ml  launcher_logic.ml  message_handler.ml  nats_bindings.ml  signal_utils.ml
qarrayDevice/: .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  index.html  install_python_deps.sh  requirements.txt
qarrayDevice/src/: Device.cpp  PythonModulePath.hpp.in  device.py
qarrayDevice/tests/: CMakeLists.txt  test_device.cpp  test_visual.cpp
routine/: .clangd  CMakeLists.txt  Makefile
routine/cmake/: falcon-routine-config.cmake.in  falcon-runtime-config.cmake.in
routine/src/: hub.cpp  log.cpp
routine/tests/: CMakeLists.txt
test/: analyzer_toy.py  dune  test_acu_api.ml  test_acu_base.ml  test_autotuner_base.ml  test_config_factory.ml  test_feature_optimizer_base.ml  test_launcher.ml  test_message_handler.ml  test_pyml_standalone.ml  test_signal_analyzer_base.ml  test_signal_utils.ml  toy_acus.ml
(+666 files in other folders)
