[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "falcon-lsp"
version = "0.1.0"
description = "Language Server Protocol implementation for the Falcon autotuner DSL"
requires-python = ">=3.10"
dependencies = [
    "pygls>=1.3.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.scripts]
falcon-lsp = "falcon_lsp.server:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
