(include_subdirs unqualified)

(library
 (name falcon)
 (public_name falcon)
 (modules 
  acu_api 
  ui_api
  acu_types
  acu_templates
  optimizer_jobs
  signal_utils
  acu_registry
  base_acu 
  message_handler 
  nats_bindings 
  autotuner_base
  feature_optimizer_base
  signal_collector_base
  signal_analyzer_base
  specifications
  launcher_logic
  config_factory
  owl_helpers)
 (libraries lwt lwt.unix yojson ctypes ctypes.foreign pyml falcon_core dynlink owl-base)
 (preprocess (pps lwt_ppx))
 (flags :standard -w -32))


